<resources>
    <string name="app_name">Weatherly</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--General-->
    <string name="fragment_general_empty">Sorry! No data to display!</string>

    <!-- Tab titles -->
    <string name="fragment_title_tab1">NOW</string>
    <string name="fragment_title_tab2">HOURLY</string>
    <string name="fragment_title_tab3">FORECAST</string>

    <!--Now tab-->
    <string name="fragment_now_realfeel">Realfeel</string>
    <string name="fragment_now_humidity">Humidity</string>
    <string name="fragment_now_winds">Winds</string>
    <string name="fragment_now_visibility">Visibility</string>
    <string name="fragment_now_sunrise">Sunrise</string>
    <string name="fragment_now_sunset">Sunset</string>
</resources>
