<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:background="@color/background_material_light">

    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">

        <RelativeLayout
                android:visibility="visible"
                android:id="@+id/container_empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_general_empty"
                    />
        </RelativeLayout>

        <LinearLayout
                android:visibility="gone"
                android:id="@+id/container_main"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:id="@+id/image_big"
                        android:layout_centerInParent="true"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:src="@color/primary_material_dark"
                        />

            </RelativeLayout>


            <LinearLayout
                    android:padding="10dp"
                    android:weightSum="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <RelativeLayout
                        android:padding="10dp"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">

                    <ImageView
                            android:id="@+id/image_small"
                            android:layout_centerInParent="true"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:scaleType="center"
                            android:src="@color/primary_material_dark"
                            />

                </RelativeLayout>

                <RelativeLayout
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">

                    <TextView
                            style="@android:style/TextAppearance.DeviceDefault.Large"
                            android:id="@+id/text_major_condition_verbal"
                            android:layout_centerInParent="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Sunny"
                            />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                    android:layout_marginBottom="30dp"
                    android:weightSum="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <RelativeLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">

                    <TextView
                            style="@android:style/TextAppearance.DeviceDefault.Large"
                            android:id="@+id/text_major_condition_number"
                            android:layout_centerInParent="true"
                            android:text="26"
                            android:textSize="24sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            />

                    <TextView
                            style="@android:style/TextAppearance.DeviceDefault.Small"
                            android:text="H:29/L15"
                            android:id="@+id/text_minor_hl"
                            android:layout_below="@id/text_major_condition_number"
                            android:layout_centerHorizontal="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                </RelativeLayout>

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                    <!-- This should be probably injected dynamically -->

                    <!--Real feel is not provided from the API-->
                    <!--<LinearLayout-->
                            <!--android:weightSum="2"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="wrap_content">-->

                        <!--<TextView-->
                                <!--android:text="@string/fragment_now_realfeel"-->
                                <!--android:layout_weight="1"-->
                                <!--android:layout_width="0dp"-->
                                <!--android:layout_height="wrap_content"/>-->

                        <!--<TextView-->
                                <!--android:id="@+id/text_minor_realfeel"-->
                                <!--android:layout_weight="1"-->
                                <!--android:layout_width="0dp"-->
                                <!--android:layout_height="wrap_content"/>-->


                    <!--</LinearLayout>-->

                    <LinearLayout
                            android:weightSum="2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                style="@android:style/TextAppearance.DeviceDefault.Small"
                                android:text="@string/fragment_now_humidity"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>

                        <TextView
                                style="@android:style/TextAppearance.DeviceDefault.Small"
                                android:id="@+id/text_minor_humidity"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <LinearLayout
                            android:weightSum="2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                style="@android:style/TextAppearance.DeviceDefault.Small"
                                android:text="@string/fragment_now_winds"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>

                        <TextView
                                style="@android:style/TextAppearance.DeviceDefault.Small"
                                android:id="@+id/text_minor_winds"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <!--<LinearLayout-->
                            <!--android:weightSum="2"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="wrap_content">-->

                        <!--<TextView-->
                                <!--android:text="@string/fragment_now_visibility"-->
                                <!--android:layout_weight="1"-->
                                <!--android:layout_width="0dp"-->
                                <!--android:layout_height="wrap_content"/>-->

                        <!--<TextView-->
                                <!--android:id="@+id/text_minor_visibility"-->
                                <!--android:layout_weight="1"-->
                                <!--android:layout_width="0dp"-->
                                <!--android:layout_height="wrap_content"/>-->

                    <!--</LinearLayout>-->

                    <LinearLayout
                            android:weightSum="2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                style="@android:style/TextAppearance.DeviceDefault.Small"
                                android:text="@string/fragment_now_sunrise"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>

                        <TextView
                                style="@android:style/TextAppearance.DeviceDefault.Small"
                                android:id="@+id/text_minor_sunrise"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>

                    <LinearLayout
                            android:weightSum="2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                style="@android:style/TextAppearance.DeviceDefault.Small"
                                android:text="@string/fragment_now_sunset"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>

                        <TextView
                                style="@android:style/TextAppearance.DeviceDefault.Small"
                                android:id="@+id/text_minor_sunset"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</ScrollView>